# CALalarm

./: .gitignore  .gitmodules  CMakeLists.txt  FULL_INSTALL.md  LICENSE.spdx  README.md  package.json  sdkconfig  sdkconfig.defaults
alarm/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
alarm/components/ssd1306/: .gitignore  CMakeLists.txt  Kconfig  README.md
alarm/components/ssd1306/include/: font8x8_basic.h  ssd1306.h
alarm/components/ssd1306/src/: font8x8_basic.c  ssd1306.c  ssd1306_i2c.c  ssd1306_spi.c
alarm/components/ssd1306/test/: CMakeLists.txt  main.c
alarm/main/: CMakeLists.txt  Kconfig.example  buzzer_task.c  buzzer_task.h  display_task.c  display_task.h  main.c  mqtt_task.c
alarm/main/buzzer/: buzzer.cpp
alarm/main/http/: https_client_task.c
alarm/main/httpd/: httpd.c  httpd_google_push.c
alarm/main/ipc/: ipc.h
clock/: CMakeLists.txt  display_task.c  https_client_task.c  main.c  mqtt_task.c  sdkconfig.defaults  sdkconfig.old
clock/components/led_strip/: CMakeLists.txt  README.md  led_strip_rmt_ws2812.c
clock/components/led_strip/include/: led_strip.h
clock/main/: CMakeLists.txt  Kconfig  Kconfig.example  display_task.c  main.c  mqtt_task.c
clock/main/http/: https_client_task.c
clock/main/httpd/: httpd.c  httpd.h  httpd_google_push.c
clock/main/ipc/: ipc.h
components/led_strip/: CMakeLists.txt
components/led_strip/include/: led_strip.h
components/led_strip/src/: led_strip_rmt_ws2812.c
components/ota_task/: Kconfig  ota_task.c  ota_task.h
components/reset_task/: Kconfig  reset_task.c  reset_task.h
factory/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
factory/main/: CMakeLists.txt  Kconfig  Kconfig.example  Kconfig.projbuild  ble_prov_handlers.c  main.c
hardware/: CALalarm-r0.sch  CALalarm-r1.sch
main/: #Kconfig#  .#Kconfig  CMakeLists.txt  Kconfig  Kconfig-example  display_task.c  display_task.h  http_post_server.c  http_post_server.h  https_client_task.c  https_client_task.h  ipc_msgs.h  main.c  mqtt_client_task.c  mqtt_client_task.h  mqtt_msg.h  mqtt_task.c  mqtt_task.h
media/[Originals]/: assembly-2_resize.jpg.xmp
scripts/: Code.gs  Code.js  appsscript-push-notif.json  doGet.gs  push-notifications.gs
